<resources>
    <string name="app_name">folioreader</string>
    <string name="andada">Andada</string>
    <string name="ebgaramond">Garamond</string>
    <string name="lato">Lato</string>
    <string name="lora">Lora</string>
    <string name="raleway">Raleway</string>

    <string name="andada_font">fonts/andada/Andada-Regular.otf</string>
    <string name="ebgaramond_font">fonts/ebgaramond/EBGaramond-Regular.ttf</string>
    <string name="lato_font">fonts/lato/Lato-Regular.ttf</string>
    <string name="lora_font">fonts/lora/Lora-Regular.ttf</string>
    <string name="raleway_font">fonts/raleway/Raleway-Regular.ttf</string>

    <string name="minutes_left">%1$d minut ·&#160;</string>
    <string name="minute_left">%1$d minuta ·&#160;</string>
    <string name="less_than_minute">Mniej niż minuta ·&#160;</string>

    <string name="copied">Skopiowano</string>
    <string name="send_to">Prześlij do</string>

    <string name="copy">Kopiuj</string>
    <string name="share">Udostępnij</string>
    <string name="define">Zdefiniuj</string>
    <string name="highlight">Highlight</string>

    <plurals name="pages_left">
        <item quantity="zero">Pozostało %1$d stron</item>
        <item quantity="one">Pozostała %1$d strona</item>
        <item quantity="two">Pozostały %1$d strony</item>
        <item quantity="few">Pozostały %1$d strony</item>
        <item quantity="many">Pozostało %1$d stron</item>
        <item quantity="other">Pozostało %1$d stron</item>
    </plurals>

    <string name="highlights">Highlight</string>
    <string name="half_speed">1/2x</string>
    <string name="onex">1x</string>
    <string name="one_and_half">1&#160;1/2x</string>
    <string name="two_x">2x</string>
    <string name="style">Styl</string>
    <string name="style_underline"><![CDATA[<u style=\" border-bottom: 1px dashed #bcbcbc;   text-decoration: none;\">Styl</u>]]></string>
    <string name="full_path">full-path</string>
    <string name="error_goToPage">goToPage error:</string>
    <string name="zip">.zip</string>
    <string name="htmlBodyTableOpen">&lt;html&gt;&lt;body&gt;&lt;table&gt;</string>
    <string name="titlesMeta">&lt;tr&gt;&lt;td&gt;Titles:&lt;/td&gt;</string>
    <string name="authorsMeta">&lt;tr&gt;&lt;td&gt;Authors:&lt;/td&gt;</string>
    <string name="contributorsMeta">&lt;tr&gt;&lt;td&gt;Contributors:&lt;/td&gt;</string>
    <string name="languageMeta">&lt;tr&gt;&lt;td&gt;Language:&lt;/td&gt;&lt;td&gt;</string>
    <string name="publishersMeta">&lt;tr&gt;&lt;td&gt;Publishers:&lt;/td&gt;</string>
    <string name="typesMeta">&lt;tr&gt;&lt;td&gt;Types:&lt;/td&gt;</string>
    <string name="descriptionsMeta">&lt;tr&gt;&lt;td&gt;Descriptions:&lt;/td&gt;</string>
    <string name="rightsMeta">&lt;tr&gt;&lt;td&gt;Rights:&lt;/td&gt;</string>
    <string name="tablebodyhtmlClose">&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
    <string name="tocReference">&lt;tr&gt;&lt;td&gt;Table of Contents:&lt;/td&gt;</string>
    <string name="change_Font">Zmień czcionkę</string>
    <string name="change_Font_Color">Kolor czcionki:</string>
    <string name="changeStyle">Zmień styl</string>
    <string name="blue_rgb">#0000ff</string>
    <string name="red_rgb">#ff0000</string>
    <string name="green_rgb">#00ff00</string>
    <string name="black_rgb">#000000</string>
    <string name="white_rgb">#ffffff</string>
    <string name="error_CannotChangeStyle">Nie można zmienić stylu!</string>
    <string name="OK">OK</string>
    <string name="Cancel">Anuluj</string>
    <string name="SetSizeTitle">Rozmiar panelu:</string>
    <string name="LanguageChooserTitle">Wybierz dwa języki:</string>
    <string name="parallelTextBool">parallelTextBool</string>
    <string name="loading">Ładowanie</string>
    <string name="please_wait">Proszę czekać…</string>
    <string name="one_and_half_speed"><![CDATA[1<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="half_speed_text"><![CDATA[<sup>1</sup>/<sub>2</sub>x]]></string>
    <string name="please_wait_till_audio_is_parsed">Proszę czekać na załadowanie pliku audio</string>
    <string name="audio_mark_id">javascript:alert(audioMarkID(\'epub-media-overlay-playing\',\'%s\'))</string>
    <string name="setmediaoverlaystyle">javascript:alert(setMediaOverlayStyle(\'%s\'))</string>
    <string name="goto_highlight">javascript:alert(gotoHighlight(\'%s\'))</string>
    <string name="getHighlightString">javascript:alert(getHighlightString(\'%s\'))</string>
    <string name="sethighlightstyle">javascript:alert(setHighlightStyle(\'%s\'));</string>
    <string name="css_tag"><![CDATA[<link rel=\"stylesheet\" type=\"text/css\" href=\"%s\">]]></string>
    <string name="script_tag"><![CDATA[<script type=\"text/javascript\" src=\"%s\"></script>]]></string>
    <string name="td_tag"><![CDATA[<td>%s</td></tr>]]></string>
    <string name="tr_tag"><![CDATA[<tr><td></td><td>%s</td></tr>]]></string>
    <string name="pattern">\\{\\{(-?\\d+\\.?\\d*)\\,(-?\\d+\\.?\\d*)\\}\\,\\s\\{(-?\\d+\\.?\\d*)\\,(-?\\d+\\.?\\d*)\\}\\}</string>
    <!--<string name="pattern2">\\{\\{(-?\\d+\\.?\\d*)\\,(-?\\d+\\.?\\d*)\\}\\,\\s\\{(-?\\d+\\.?\\d*)\\,(-?\\d+\\.?\\d*)\\}\\}</string>-->
    <string name="script_tag_method_call"><![CDATA[<script type=\"text/javascript\">%s</script>]]></string>
  <string name="underline_highlights">
      <span style="border-bottom: 1px solid #ff0000;">%s</span>
  </string>
    <string name="edit_notes">Zapisz notatki</string>
    <string name="save_note">Zapisz notatkę</string>
    <string name="please_enter_note">Proszę wprowadzić notatkę</string>
    <string name="contents">Spis treści</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debug_start_drag">Starting drag!</string>
    <string name="debug_start_unable_drag">Starting unable to drag!</string>
    <string name="dictionary">Dictionary</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="cannot_access_epub_message">Cannot open epub it needs storage access !</string>
</resources>
