<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/container"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/day_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_sun_normal"/>

        <ImageButton
            android:id="@+id/night_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_moon_normal"/>
    </LinearLayout>

    <View
        android:id="@+id/first_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/top_buttons"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/grey_color"/>

    <LinearLayout
        android:id="@+id/fontLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/first_separator"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4.0">

        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_ebgaramond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/ebgaramond"
            android:textSize="17sp"
            app:folio_font="@string/ebgaramond_font"/>

        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_lato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/lato"
            android:textSize="17sp"
            app:folio_font="@string/lato_font"/>

        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_lora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/lora"
            android:textSize="17sp"
            app:folio_font="@string/lora_font"/>

        <com.folioreader.view.StyleableTextView
            android:id="@+id/btn_font_raleway"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/raleway"
            android:textSize="17sp"
            app:folio_font="@string/raleway_font"/>
    </LinearLayout>

    <View
        android:id="@+id/second_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/fontLayout"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/grey_color"/>

    <RelativeLayout
        android:id="@+id/font_size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_separator"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/small_font"
            android:layout_width="@dimen/config_icon_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/font_small"
            android:tint="@color/config_gray"/>

        <SeekBar
            android:id="@+id/seekbar_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/big_font"
            android:layout_toRightOf="@+id/small_font"
            android:max="4"
            android:maxHeight="0.2dp"
            android:minHeight="0.2dp"
            android:padding="16dp"/>

        <ImageView
            android:id="@+id/big_font"
            android:layout_width="@dimen/config_icon_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/font_big"
            android:tint="@color/config_gray"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/margin_size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font_size_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/small_margin"
            android:layout_width="@dimen/config_icon_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/margin_small"
            android:tint="@color/config_gray"/>

        <SeekBar
            android:id="@+id/seekbar_margin_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/big_margin"
            android:layout_toRightOf="@+id/small_margin"
            android:max="4"
            android:maxHeight="0.2dp"
            android:minHeight="0.2dp"
            android:padding="16dp"/>

        <ImageView
            android:id="@+id/big_margin"
            android:layout_width="@dimen/config_icon_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/margin_big"
            android:tint="@color/config_gray"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/interline_size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/margin_size_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/small_interline"
            android:layout_width="@dimen/config_icon_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/inset_small"
            android:tint="@color/config_gray"/>

        <SeekBar
            android:id="@+id/seekbar_interline_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/big_interline"
            android:layout_toRightOf="@+id/small_interline"
            android:max="4"
            android:maxHeight="0.2dp"
            android:minHeight="0.2dp"
            android:padding="16dp"/>

        <ImageView
            android:id="@+id/big_interline"
            android:layout_width="@dimen/config_icon_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/inset_big"
            android:tint="@color/config_gray"/>
    </RelativeLayout>
</RelativeLayout>